# cpp-starter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/model_lib/: CMakeLists.txt
src/model_lib/include/: model.h
src/model_lib/src/: model.cpp
src/model_static/: CMakeLists.txt
src/model_static/include/: helper.h
src/model_static/src/: helper.cpp
